<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmento_Cliente.Fragment_cliente_cuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Imagen cliente-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_perfil_cliente"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_perfil"/>
        <!--nombres C-->

        <TextView
            android:id="@+id/nombres_cliente"
            android:text="@string/nombres_cliente"
            android:layout_below="@+id/img_perfil_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_nombres_clientes"
            android:text="@string/Txt_nombres_clientes"
            android:layout_below="@+id/img_perfil_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--email-->
        <TextView
            android:id="@+id/email_cliente"
            android:text="@string/email_cliente"
            android:layout_below="@+id/nombres_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_email_cliente"
            android:text="@string/Txt_email_cliente"
            android:layout_below="@+id/nombres_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Miembro dese-->
        <TextView
            android:id="@+id/Tiempo_registro_cliente"
            android:text="@string/Tiempo_registro_cliente"
            android:layout_below="@+id/email_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_tiempo_registro_cliente"
            android:text="@string/Txt_tiempo_registro_cliente"
            android:layout_below="@+id/email_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Edad-->
        <TextView
            android:id="@+id/edad_cliente"
            android:text="@string/edad_cliente"
            android:layout_below="@+id/Tiempo_registro_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_edad_cliente"
            android:text="@string/Txt_edad_cliente"
            android:layout_below="@+id/Tiempo_registro_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Sexo-->
        <TextView
            android:id="@+id/sexo_cliente"
            android:text="@string/sexo_cliente"
            android:layout_below="@+id/edad_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_sexo_cliente"
            android:text="@string/Txt_sexo_cliente"
            android:layout_below="@+id/edad_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--telefono-->
        <TextView
            android:id="@+id/telefonoC_cliente"
            android:text="@string/telefono_cliente"
            android:layout_below="@+id/rol_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_telefono_cliente"
            android:text="@string/Txt_sexo_cliente"
            android:layout_below="@+id/rol_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Rol-->
        <TextView
            android:id="@+id/rol_cliente"
            android:text="@string/rol_cliente"
            android:layout_below="@+id/sexo_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_rol_cliente"
            android:text="@string/Txt_rol_cliente"
            android:layout_below="@+id/sexo_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--NSS-->
                <TextView
                    android:id="@+id/NSS_cl"
                    android:text="@string/NSS_cl"
                    android:layout_below="@+id/telefonoC_cliente"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/Txt_NSS_cl"
                    android:text="@string/Txt_NSS_cl"
                    android:layout_below="@+id/telefonoC_cliente"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <!--localidad-->
                <TextView
                    android:id="@+id/localidad_cl"
                    android:text="@string/localidad_cl"
                    android:layout_below="@+id/NSS_cl"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/Txt_localidad_cl"
                    android:text="@string/Txt_localidad_cl"
                    android:layout_below="@+id/NSS_cl"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_below="@+id/rol_cliente"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/Txt_mas_opciones"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/EditarPerfilCliente"
                    android:text="@string/EditarPerfilCliente"
                    app:drawableStartCompat="@drawable/ic_editar"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/CerrarSesionCliente"
                    android:text="@string/CerrarSesionCliente"
                    app:drawableStartCompat="@drawable/ic_cerrar_sesion"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!--Editar perfilr -->


            </com.google.android.material.card.MaterialCardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</ScrollView>